--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@remix-run/cloudflare": "^2.16.8",
+    "@remix-run/cloudflare-pages": "^2.16.8",
     "@remix-run/react": "^2.16.8",
     "@remix-run/server-runtime": "^2.16.8",
     "isbot": "^4.1.0",
