Name in wrangler.toml

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "remix-cloudflare-workers-template"
+name = "portfolio"
 
 main = "./server.ts"
 workers_dev = true
